...
                .size(200.dp)
                .padding(8.dp)
        )

        // Title
        Text(
            text = "Kalibrasi Kompas",
            fontSize = 18.sp,
            fontWeight = FontWeight.Bold,
            color = if (isDark) PutihBersih else TextCharcoal,
            textAlign = TextAlign.Center
        )

...
            colors = ButtonDefaults.buttonColors(
                containerColor = MerahMerdeka,
                contentColor = PutihBersih
            )
        ) {
            Text(
                text = "Ok, Saya Mengerti",
                fontSize = 15.sp,
                fontWeight = FontWeight.Bold
            )
        }

        Spacer(modifier = Modifier.height(16.dp))
...
