...
        modifier = modifier
            .fillMaxWidth()
            .padding(horizontal = 24.dp)
            .padding(bottom = 36.dp)
    ) {
            Text(
                text = "Pengaturan Teks & Bacaan",
                fontSize = 18.sp,
                fontWeight = FontWeight.Bold,
                color = if (selectedTheme.isDark) Color.White else TextCharcoal
            )
            Spacer(modifier = Modifier.height(16.dp))

...
